Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10564

No error returned when inserting an overflowed value into a decimal column

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.0.0
    • Impala 4.0.0
    • Backend, Frontend
    • None
    • ghx-label-3

    Description

      When using CTAS statements or INSERT-SELECT statements to insert rows to table with decimal columns, Impala insert NULL for overflowed decimal values, instead of returning error. This issue happens when the data expression for the decimal column in SELECT sub-query consists at least one alias. This issue is similar as IMPALA-6340, but IMPALA-6340 only fixed the issue for the cases with the data expression for the decimal columns as constants so that the overflowed decimal values could be detected by frontend during expression analysis.  If there is alias (variables) in the data expression for the decimal column, Frontend could not evaluate data expression in expression analysis phase. Only backend could evaluate the data expression when backend execute fragment instances for SELECT sub-queries. The log messages showed that the executor detected the decimal overflow error, but somehow it did not propagate the error to the coordinator, hence the error was not returned to the client.  

      Attachments

        Activity

          People

            wzhou Wenzhe Zhou
            wzhou Wenzhe Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: