tests/query_test/test_decimal_queries.py
@@ -18,7 +18,9 @@
 # Targeted tests for decimal type.
 
 from copy import copy
+import pytest
 
+from tests.beeswax.impala_beeswax import ImpalaBeeswaxException
 from tests.common.impala_test_suite import ImpalaTestSuite
 from tests.common.test_dimensions import (create_exec_option_dimension_from_dict,
     create_client_protocol_dimension, hs2_parquet_constraint)
@@ -87,3 +89,100 @@ class TestAvroDecimalQueries(ImpalaTestSuite):
 
   def test_avro_queries(self, vector):
     self.run_test_case('QueryTest/decimal_avro', vector)
+
+
+# Tests involving DECIMAL typed expressions with data overflow. The results depend on
+# whether DECIMAL version 2 is enabled, so the .test file itself toggles the DECIMAL_V2
+# query option.
+@pytest.mark.execute_serially
+class TestDecimalOverflowExprs(ImpalaTestSuite):
+  @classmethod
+  def get_workload(cls):
+    return 'functional-query'
+
+  @classmethod
+  def add_test_dimensions(cls):
+    super(TestDecimalOverflowExprs, cls).add_test_dimensions()
+    cls.ImpalaTestMatrix.add_constraint(lambda v:
+        (v.get_value('table_format').file_format in ['kudu', 'parquet', 'text']))
+
+  def test_insert_select_exprs(self, vector, unique_database):
+    TBL_NAME_1 = '`{0}`.`overflowed_decimal_tbl_1`'.format(unique_database)
+    TBL_NAME_2 = '`{0}`.`overflowed_decimal_tbl_2`'.format(unique_database)
+    # Create table with decimal data type of column.
+    if 'parquet' in str(vector.get_value('table_format')):
+      stmt = "CREATE TABLE {0} (i int, d_28 decimal(28,10)) STORED AS PARQUET"
+    elif 'kudu' in str(vector.get_value('table_format')):
+      stmt = "CREATE TABLE {0} (i int primary key, d_28 decimal(28,10)) STORED AS KUDU"
+    else:
+      stmt = "CREATE TABLE {0} (i int, d_28 decimal(28,10))"
+    query_1 = stmt.format(TBL_NAME_1)
+    query_2 = stmt.format(TBL_NAME_2)
+
+    self.execute_query_expect_success(self.client, "DROP TABLE IF EXISTS %s" % TBL_NAME_1)
+    self.execute_query_expect_success(self.client, "DROP TABLE IF EXISTS %s" % TBL_NAME_2)
+    self.execute_query_expect_success(self.client, query_1)
+    self.execute_query_expect_success(self.client, query_2)
+
+    # Run INSERT-SELECT queries.
+    self.run_test_case('QueryTest/decimal-insert-overflow-exprs', vector,
+        use_db=unique_database)
+
+  def test_ctas_exprs(self, vector, unique_database):
+    TBL_NAME_1 = '`{0}`.`overflowed_decimal_tbl_1`'.format(unique_database)
+    TBL_NAME_2 = '`{0}`.`overflowed_decimal_tbl_2`'.format(unique_database)
+    if 'parquet' in str(vector.get_value('table_format')):
+      stmt_1 = "CREATE TABLE {0} STORED AS PARQUET " \
+          "AS SELECT 1 as i, cast(a*a*a as decimal (28,10)) as d_28 FROM " \
+          "(SELECT cast(654964569154.9565 as decimal (28,7)) as a) q"
+      stmt_2 = "CREATE TABLE {0} STORED AS PARQUET " \
+          "AS SELECT i, cast(d_28*d_28*d_28 as decimal (28,10)) as d_28 FROM {1} " \
+          "WHERE d_28 is not null"
+    elif 'kudu' in str(vector.get_value('table_format')):
+      stmt_1 = "CREATE TABLE {0} PRIMARY KEY (i) STORED AS KUDU " \
+          "AS SELECT 1 as i, cast(a*a*a as decimal (28,10)) as d_28 FROM " \
+          "(SELECT cast(654964569154.9565 as decimal (28,7)) as a) q"
+      stmt_2 = "CREATE TABLE {0} PRIMARY KEY (i) STORED AS KUDU " \
+          "AS SELECT i, cast(d_28*d_28*d_28 as decimal (28,10)) as d_28 FROM {1} " \
+          "WHERE d_28 is not null"
+    else:
+      stmt_1 = "CREATE TABLE {0} " \
+          "AS SELECT 1 as i, cast(a*a*a as decimal (28,10)) as d_28 FROM " \
+          "(SELECT cast(654964569154.9565 as decimal (28,7)) as a) q"
+      stmt_2 = "CREATE TABLE {0} " \
+          "AS SELECT i, cast(d_28*d_28*d_28 as decimal (28,10)) as d_28 FROM {1} " \
+          "WHERE d_28 is not null"
+    query_1 = stmt_1.format(TBL_NAME_1)
+    # CTAS with selection from another table.
+    query_2 = stmt_2.format(TBL_NAME_2, TBL_NAME_1)
+
+    # Query_1 is aborted with error message "Decimal expression overflowed" and NULL is
+    # not inserted into table.
+    self.execute_query_expect_success(self.client, "SET decimal_v2=true")
+    self.execute_query_expect_success(self.client, "DROP TABLE IF EXISTS %s" % TBL_NAME_1)
+    try:
+      self.execute_query_using_client(self.client, query_1, vector)
+      assert False, "Query was expected to fail"
+    except ImpalaBeeswaxException, e:
+      assert "Decimal expression overflowed" in str(e)
+
+    result = self.execute_query_expect_success(self.client,
+        "SELECT count(*) FROM %s" % TBL_NAME_1)
+    assert int(result.get_data()) == 0
+
+    # Insert data to table 1.
+    self.execute_query_expect_success(self.client,
+        "INSERT INTO TABLE %s VALUES(100, cast(654964569154.9565 as decimal (28,10)))" %
+        TBL_NAME_1)
+    # Query_2 is aborted with error message "Decimal expression overflowed" and NULL is
+    # not inserted into table.
+    self.execute_query_expect_success(self.client, "DROP TABLE IF EXISTS %s" % TBL_NAME_2)
+    try:
+      self.execute_query_using_client(self.client, query_2, vector)
+      assert False, "Query was expected to fail"
+    except ImpalaBeeswaxException, e:
+      assert "Decimal expression overflowed" in str(e)
+
+    result = self.execute_query_expect_success(self.client,
+        "SELECT count(*) FROM %s" % TBL_NAME_2)
+    assert int(result.get_data()) == 0
